2020-08-16 databases catering.backup empty-catering.backup and full_catering.backup extended with table article_grouplines 
2020-08-17 catering.py message by barcode not in assortiment added.
2020-08-24 catering.py purchasing, receiving, printmodules and imports with csv files added. 
2020-08-24 databases added tables invoices, purchase_orderlines and changed articles added columns
           3 databases included empty, default and full for testing.  
           This version is roughly ready, but not fully tested. Documenting gets started.
2020-08-25 catering.py imports errormessages not shown but written in catering_import.log in home directory of user.
2020-08-26 catering.py insert articles barcodescan and generating barcode separated
2020-08-26 catering.py bug repaired by viewing additional products.
2020-08-26 Documentatation_Catering_POS.pdf started, backend documentation follows
2020-08-26 catering.py by imports new products a log message is made for invalid barcode checks.
2020-08-27 Documentation changed and added explanation article menu
2020-08-27 catering.py not necessary menu purchasing removed and integrated in submenu.
2020-08-27 Documentation Catering_POS.pdf ready.
2020-08-27 catering.py bug in default bg_color groupbuttons repaired
2020-08-27 catering.py bug repaired with addition tables wrong name
2020-08-27 catering.backup and empty-catering.backup table addition name changed from additional in addition
2020-08-27 documentation added replace pictures from maingroups and logo
2020-08-30 catering.py views bug repaired by viewing tableviews with no records in database
2020-08-30 databases full_catering.backup catering.backup and empty-catering.backup changed for above problems
2020-08-30 catering.py error handling viewing for empty tables improved
2020-08-30 catering.py modest calculator error handling improved
2020-08-30 Documentation_Catering_POS.pdf under Purchasing deliveries addition item_stock in table articles about increase.